# basic-cli

./: .gitignore  .roc-version  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  build.ps1  build.sh  bundle.ps1  bundle.sh  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml  (+1 more)
ci/: all_tests.sh  build_pinned_roc.sh  install_roc.sh  regenerate_glue.sh  test_bundle.sh  valgrind.supp  windows_tests.ps1  zig-ar.sh  zig-cc.sh
docs/: basic-cli.roc
examples/: README.md  bytes-stdin-stdout.roc  command-line-args.roc  command-spawn.roc  command.roc  dir.roc  env-var.roc  error-handling.roc  file-accessed-modified-created-time.roc  file-permissions.roc  file-read-buffered.roc  file-read-buffered.todoroc  file-read-write.roc  file-size.roc  hello-world.roc  hello.roc  http-client.roc  http-simple.roc  http.roc  http.todoroc  locale.roc  path.roc  print.roc  random.roc  sqlite-basic.roc  sqlite-basic.todoroc  sqlite-everything.roc  sqlite-everything.todoroc  stdin-basic.roc  stdin-pipe.roc  tcp-client.roc  tcp-client.todoroc  tcp-pool.roc  temp-dir.roc  terminal-app-snake.roc  terminal-app-snake.todoroc  time.roc  tty.roc  url.roc
platform/: Cmd.roc  Dir.roc  Env.roc  File.roc  Host.roc  Http.roc  IOErr.roc  InternalDateTime.roc  InternalHttp.roc  InternalSqlite.roc  Locale.roc  OsStr.roc  Path.roc  PathEncoding.roc  Random.roc  Sleep.roc  Sqlite.roc  Stderr.roc  Stdin.roc  Stdout.roc  Tcp.roc  Tty.roc  Url.roc  Utc.roc  main.roc
scripts/: build.py  bundle.py  check_release_version.py  restore_release_docs.sh  tcp_echo_server.py  test.py  test_check_release_version.py  test_spec.json  update_app_platform_urls.py
src/: cmd.rs  http.rs  lib.rs  roc_platform_abi.rs  sqlite.rs  tcp.rs
tests/: cmd-test.roc  env.roc  env.todoroc  file.roc  path-test.roc  sqlite.roc  tcp.roc  url.roc  utc.roc
(+31 files in other folders)
