[package]
name = "roc_host"
version = "0.0.1"
authors = ["The Roc Contributors"]
edition = "2021"
license = "UPL-1.0"
repository = "https://github.com/roc-lang/basic-cli"

[lib]
name = "host"
crate-type = ["staticlib"]

[dependencies]
crossterm = "=0.29.0"
getrandom = "=0.2.16"
libc = "=0.2.180"

[target.'cfg(not(target_os = "macos"))'.dependencies]
sys-locale = "=0.3.2"

[profile.release]
lto = true
strip = "debuginfo"
panic = "abort"
