[package]
name = "roc_host"
version = "0.21.0-rc4"
authors = ["The Roc Contributors"]
edition = "2021"
rust-version = "1.83"
license = "UPL-1.0"
repository = "https://github.com/roc-lang/basic-cli"

[lib]
name = "host"
crate-type = ["staticlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(no_roc_std_helpers)"] }

[dependencies]
crossterm = "=0.29.0"
getrandom = "=0.2.16"
libc = "=0.2.180"
libsqlite3-sys = { version = "=0.33.0", features = ["bundled"] }

# HTTP stack (ported from the old roc_http crate). `ring` is the rustls crypto
# backend, and WebPKI roots keep the static host self-contained for Roc linking.
hyper = { version = "=1.6.0", default-features = false, features = ["http1", "client"] }
hyper-util = { version = "=0.1.12", default-features = false, features = ["client", "client-legacy", "http1", "tokio"] }
hyper-rustls = { version = "=0.27.6", default-features = false, features = ["http1", "tls12", "webpki-tokio", "ring"] }
http-body-util = "=0.1.3"
tokio = { version = "=1.45.0", default-features = false, features = ["rt", "net", "time"] }
bytes = "=1.10.1"

[target.'cfg(not(target_os = "macos"))'.dependencies]
sys-locale = "=0.3.2"

[profile.release]
lto = true
strip = "debuginfo"
panic = "abort"
